# curveforge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  curve_request.md
.github/workflows/: ci.yml  release.yml
docs/case-studies/: triangle-br09.md
gallery/: README.md  bnk-classical.yml  harman-8-with-sub-lift.yml  harman-8.yml  harman-immersive-low-sibilance.yml  olive-warm.yml  reference-flat.yml  toole-monitoring.yml
src/curveforge/: __init__.py  api.py  build.py  cli.py  config.py  curve.py  dsp.py  plot.py
src/curveforge/curves/: __init__.py  _base.py  b_and_k.py  breakpoints.py  flat.py  harman.py  olive_welti_inroom.py  toole_inroom.py  welti_sub.py
src/curveforge/output/: __init__.py  csv.py  json.py  targetcurve.py
src/curveforge/transforms/: __init__.py  _base.py  gain.py  peq.py  rolloff.py  shelf.py  tilt.py
tests/: test_api.py  test_build.py  test_check_literal_size.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_curve.py  test_curves.py  test_dsp.py  test_gallery.py  test_plot.py  test_targetcurve_io.py  test_transforms.py  test_tweak.py
tools/: check_literal_size.py
